# ArmForge

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  main.cpp  vcpkg.json
app/control/: control_loop.cpp  control_loop.h
app/controllers/: planning_controller.cpp  planning_controller.h  robot_controller.cpp  robot_controller.h
core/: CMakeLists.txt
core/kinematics/: forward_kinematics.cpp  forward_kinematics.h  ik_solver.cpp  ik_solver.h
core/math/: rotation.h  se3.h
core/model/: dh_parameters.h  joint.h  kinematic_chain.cpp  kinematic_chain.h
core/planning/: collision.h  i_motion_planner.h  obstacle.h  rrt_connect_planner.cpp  rrt_connect_planner.h
core/planning/cuda/: collision_kernel.cu  collision_kernel.cuh  cuda_rrt_planner.cpp  cuda_rrt_planner.h
ui/: Main.qml
ui/panels/: ChartPanel.qml  JogPanel.qml  PlanningPanel.qml
ui/scene/: GizmoView.qml  PlanningView.qml  RobotView.qml  SceneView.qml
